name: df1-html
version: 1.0
author: Renzo Carbonara
maintainer: renλren.zone
copyright: Renzo Carbonara 2020
license: BSD3
license-file: LICENSE.txt
extra-source-files: README.md CHANGELOG.md
category: Logging
build-type: Simple
cabal-version: >=1.18
synopsis: Renders df1 logs as HTML
description: Renders df1 logs as HTML
homepage: https://github.com/k0001/di
bug-reports: https://github.com/k0001/di/issues

library
  hs-source-dirs: lib
  default-language: Haskell2010
  exposed-modules: Df1.Html.Render, Df1.Html.Parse
  build-depends:
    attoparsec,
    base >=4.9 && <5.0,
    bytestring,
    containers,
    df1,
    text,
    time,
    xmlbf
  ghcjs-options: -Wall -O3
  ghc-options: -Wall -O2

test-suite test
  default-language: Haskell2010
  ghc-options: -threaded
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base,
    containers,
    df1,
    df1-html,
    tasty,
    tasty-hunit,
    time,    
    xmlbf
